[gd_scene load_steps=3 format=2]

[ext_resource path="res://CoolLine_Max11/script/trigger_direction.gd" type="Script" id=1]
[ext_resource path="res://CoolLine_Max11/img/arrow_right.png" type="Texture" id=2]

[node name="btn_trigger" type="Node2D"]
position = Vector2( -7.62939e-006, 0.540375 )
script = ExtResource( 1 )

[node name="up_btn" type="TextureButton" parent="."]
margin_left = -0.958766
margin_top = -56.9913
margin_right = 31.0412
margin_bottom = -30.9913
rect_rotation = -89.8009
rect_pivot_offset = Vector2( 1.1673, 12.0376 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="left_btn" type="TextureButton" parent="."]
margin_left = -44.8153
margin_top = -11.5944
margin_right = -12.8153
margin_bottom = 14.4056
rect_rotation = -177.34
rect_pivot_offset = Vector2( 1.1673, 12.0376 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="down_btn" type="TextureButton" parent="."]
margin_left = -0.958757
margin_top = 31.1814
margin_right = 31.0412
margin_bottom = 57.1814
rect_rotation = -269.7
rect_pivot_offset = Vector2( 1.1673, 12.0376 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="right_btn" type="TextureButton" parent="."]
margin_left = 42.6803
margin_top = -12.6751
margin_right = 74.6803
margin_bottom = 13.3249
rect_rotation = -360.188
rect_pivot_offset = Vector2( 1.1673, 12.0376 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
